# weatherWidget

./: CMakeLists.txt  README.md  main.cpp
